2007-08-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menus.c: Changed the following menu keyboard shortcuts to
	  avoid conflicts with default editing keybindings
	  (fixes bug #1639477):
	  - Cut - CTRL+D
	  - Copy - CTRL+F
	  - Paste - CTRL+G
	  - Start Timer - CTRL+S
	  - Stop Timer - CTRL+W
	
2007-08-18  Goedson Teixeira Paixao  <goedson@debian.org>

	* ghtml/C/invoice.ghtml: Applied patch #1775501 with small
	corrections to the generated HTML output.

2007-08-06  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (save_projects): fixed double free of errmsg. This
	fixes bug #1548248

2007-08-03  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/proj.c, src/journal.c, src/proj_p.h: Include only qof/qof.h
	  from the QOF library, to make it buildable with 0.7.2.

	* configure.in, Makefile.am: Removed references to the internal
	  copy of QOF from the configure scripts.

2007-07-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* ghtml/C/primer.ghtml, ghtml/C/invoice.ghtml: Applied sourceforge
	patch 1762464.

2007-01-29  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/query.c (yearday_to_centuryday): Fixed calculation of
	century day so that we won't have days skiped in the daily
	report. 

2006-12-22  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/app.c (app_new, update_status_bar): Make the status bar
	code simpler, using GtkLabels instead of GtkStatusbars to display
	current project and total day time info. This fixes bug #1597663.

2006-12-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/idle-dialog.c (util_escape_html_markup): check if str is
	NULL, before starting parsing it.

2006-12-16  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/active-dialog.c, src/app.c, src/ctree.c,
	  src/ghtml-deprecated.c, src/idle-dialog.c: include qof.h instead
	  of qof/gnc-date.h.

2006-11-28  Goedson Teixeira Paixao  <goedson@debian.org>

	* gnotime.desktop.in: Removed X-GNOME-Bugzilla* fields.
