@@ -1,3 +1,10 @@
+2007-08-24  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* ghtml/C/gtt.scm: Internationalized the gtt-filter-*-tasks and
+          gtt-task-billable-value-str so that they don't break in other
+	  locales than C. Now, non-english speakers can use the invoice
+	  report!
+
 2007-08-20  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* src/menus.c: Changed the following menu keyboard shortcuts to
